server/infra/k8s/accounts-depl.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: accounts-depl
spec:
    selector:
        matchLabels:
            app: accounts
    replicas: 1
    template:
        metadata:
            labels:
                app: accounts
        spec:
            containers:
                - name: accounts
                  image: kianattar/accounts-service
---
apiVersion: v1
kind: Service
metadata:
    name: accounts-srv
spec:
    selector:
        app: accounts
    type: ClusterIP
    ports:
        - name: accounts
          protocol: TCP
          port: 3000
          targetPort: 3000
